<resources>
    <string name="app_name" translatable="false">Cacied 2017</string>
    <string name="nombre1">William Fernado Insuasty</string>
    <string name="nombre2">Sebastian Camilo Estacio</string>
    <string name="correo1">wiinsuasty@umariana.edu.co</string>
    <string name="correo2">sestacio@umariqana.edu.co</string>
    <string name="et_facultad">Ingeniero de Sistemas</string>
    <string name="et_profesion">Estudiante</string>
    <string name="button">OK</string>
    <string name="universidad">Universidad Mariana</string>
    <string name="nombredocente1">Jose Javier villava</string>
    <string name="cargo1">Docente</string>
    <string name="gradoacademico1">Magister:</string>
    <string name="nombreacademico1">Informatica y telematica</string>
    <string name="profesion">Docencia universitaria</string>
    <string name="nombredocente2">Frankin Eduardo Jimenez</string>
    <string name="cargo2">Docente</string>
    <string name="nombreacademico2">Ing. Sistemas</string>
    <string name="nombredocente3">Andres Muñoz Guzman</string>
    <string name="cargo3">Director de la facultad</string>
    <string name="Docentes">Docentes</string>
    <string name="Instalaciones">Instalaciones</string>
    <string name="Historia">Historia</string>
    <string name="acercade">Acercade</string>
    <string name="Salir">Salir</string>
    <string name="instalaciones">Instalaciones</string>
    <string name="bloque1">Bloque Madre Caridad</string>
    <string name="descripcion1">Este bloque está ubicado en la parte frontal del acceso principal a la universidad. En él se encuentran ubicadas las siguientes dependencias y aulas de clase: Piso Cero: Canal de Radio y Televisión, Archivo Institucional, Baño, Bodega, Admisiones Registro y Control Académico, Unidad de Emprendimiento y Espíritu Empresarial, Cafetería. Con una área total de 562.73 Mts2. Primer Piso: Biblioteca, Información, Relaciones Públicas, Archivo, Secretaría General, Capilla San José, Sala de Profesores Facultad de Humanidades y Ciencias Sociales, Rectoría, Secretaría de Rectoría, Vicerrectoría Administrativa y Financiera, Pagaduría, Vicerrectoria Académica, Cartera y Crédito ICETEX, Gestión Humana, Salud Ocupacional, Centro de Investigaciones, Planeación, Decanatura de Humanidades y Ciencias Sociales, Coordinación Egresados, Control Interno, Revisoría Fiscal, Baterías Sanitarias. Con una área total de 1282.67 Mts cuadrados. Segundo Piso: Facultad de Educación, Sala de Profesores Facultad de Educación, Oficina Banco de Oferentes, Sala de Profesores de Enfermería y Terapia Ocupacional, Sala Múltiple, Fondo de Empleados UNIMAR, Facultad Ciencias Contables Económicas y Administrativas, Secretaría Contaduría Pública, Dirección Programa Contaduría Pública, Sala de Profesores Contaduría Pública, Asesoría e Investigación Contaduría Pública, Dirección Programa Administración de Negocios Internacionales, Secretaría Programa Administración de Negocios</string>
    <string name="bloque2">Bloque Santa Clara</string>
    <string name="descripcion2">Está ubicado entre el Bloque Madre Caridad y el Bloque San Francisco, en él se encuentran las siguientes dependencias y aulas de clase: Piso Cero: Dirección Servicios Operacionales, Publicaciones, Fotocopiadoras, Almacén, Sala de Teatro, Baterías Sanitarias. Con una área total de 302 Mts2. Primer Piso: Facultad Ciencias de la Salud, Centro de Educación para el Trabajo y Desarrollo Humano, Dirección Programa Terapia Ocupacional, Sala de Profesores Terapia Ocupacional, Dirección Programa Auxiliares de Enfermería, Dirección Programa Regencia en Farmacia, Dirección Programa Enfermería, Sala de Profesores Auxiliares de Enfermería, Laboratorio de Enfermería, Laboratorio de Microbiología y Biología, Salas de Proyección 110, 114, 115, Baterías Sanitarias. Con una área total de 944 Mts2. Segundo Piso: Centro de Recursos Educativos, Auditórium Madre Caridad Brader, Salas de proyección 202, 203, 204, 205, Baterías Sanitarias. Con una área total de 944 Mts2 La ubicación de estas dependencias es adecuada, de fácil acceso, permitiendo que los estudiantes y la comunidad universitaria se congreguen tanto en las salas de proyección, como en el Auditórium, recinto que se utiliza como espacio para los </string>
    <string name="bloque3">Bloque San Francisco</string>
    <string name="descripcion3">Se encuentra ubicado entre los bloques San Buenaventura y Maria Inmaculada dispone de cuatro pisos distribuidos de la siguiente manera: Piso Cero: Laboratorio de Fotografía, Sala de Proyección 004, Aula 005, Planta Eléctrica, Baterías Sanitarias. Con área total de 127 Mts2. Primer Piso: Dirección Programa Fisioterapia, Dirección Programa Radiodiagnóstico y Radioterapia, Laboratorio de Radiodiagnóstico, Auditorio Pedro Schumacher, Aulas 102, 103, 105. Con una área total de 336 Mts2. Segundo Piso: Oficina de Asesoría, Aulas 202, 203, 204, 205, Dirección Programa Nutrición y Dietética, Baterías Sanitarias. Con una área total de 308 Mts2. Tercer Piso: Dirección Programa Psicología, Sala de Profesores Psicología, Secretaría Programa Psicología, Cámara de Gessel, Aula 302, Baterías Sanitarias. Con una área total de 308 Mts2.</string>
    <string name="HistoriaM">Historia de la U.Mariana</string>
    <string name="DesHistoria"> La Universidad Mariana es el fruto de una propuesta efectuada en el marco del II Congreso Internacional de exalumnas Franciscanas celebrado en la ciudad de San Juan de Pasto, del 10 al 14 de enero de 1964, cuando se dieron cita delegaciones de diferentes regiones del país y del mundo donde tiene su apostolado la Comunidad de Hermanas Franciscanas, se presentaron varias propuestas, se pusieron a consideración y aprobación de la Honorable Asamblea.  Fue así como el 14 de enero, en el acto de clausura del II congreso internacional de exalumnas se decidió elevar la solicitud a la Congregación de Hermanas Franciscanas de María Inmaculada para la creación de un Centro de Educación Superior en esta ciudad con el propósito de continuar el nivel de formación de los estudiantes, especialmente de la mujer nariñense, por cuanto la Comunidad ofrecía una educación desde kinder hasta el bachillerato, pero era necesario su complementación universitaria</string>
    <string name="DesHistoria2">La Universidad Mariana es el fruto de una propuesta efectuada en el marco del II Congreso Internacional de exalumnas Franciscanas celebrado en la ciudad de San Juan de Pasto, del 10 al 14 de enero de 1964, cuando se dieron cita delegaciones de diferentes regiones del país y del mundo donde tiene su apostolado la Comunidad de Hermanas Franciscanas, se presentaron varias propuestas, se pusieron a consideración y aprobación de la Honorable Asamblea. Fue así como el 14 de enero, en el acto de clausura del II congreso internacional de exalumnas se decidió elevar la solicitud a la Congregación de Hermanas Franciscanas de María Inmaculada para la creación de un Centro de Educación Superior en esta ciudad con el propósito de continuar el nivel de formación de los estudiantes, especialmente de la mujer nariñense</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="andino" translatable="false">ANDINO</string>
    <string name="congreso" translatable="false">CONGRESO</string>
    <string name="comput" translatable="false">en Computacón, Informatica y Educación</string>
    <string name="textoInicio" translatable="false"><![CDATA[
               <html><body><p style=\"font-size:14px; padding=15px\" align=\"justify\">"
                            <b>CACIED</b> ser&aacute; un lugar de encuentro de investigadores, docentes, profesionales y estudiantes de los pa&iacute;ses andinos con el fin de compartir y socializar sus experiencias e investigaciones en las Ciencias de la Computaci&oacute;n, Inform&aacute;tica y Educaci&oacute;n en Ingenier&iacute;a de Sistemas.
                          <br><br>
                         <b>CACIED</b> se realizar&aacute; en las instalaciones de las Universidades de Nari&ntilde;o, Mariana e IU CESMAG en la ciudad de San Juan de Pasto, capital del departamento de Nari&ntilde;o (Colombia).
        <br><br>
        Los res&uacute;menes pueden ser aceptados como ponencia o p&oacute;ster seg&uacute;n el criterio de los evaluadores.
<br>
</p></body></html>
]]>
    </string>
    <string name="udenar" translatable="false">
        <![CDATA[ <html><body><p style=\"font-size:14px; padding=15px\" align=\"justify\">"Actualmente, la Universidad de Nari&ntilde;o cuenta con 11 Facultades, 50 programas acad&eacute;micos de pregrado de los cuales 15 se encuentran acreditados en alta calidad, 19 programas acad&eacute;micos de postgrado propios y 7 en Convenio. Se puede afirmar que el \"Alma Mater\" a trav&eacute;s del mejoramiento permanente, impulsa con tenacidad los campos de la investigaci&oacute;n, la docencia y proyecci&oacute;n social, acordes con los retos que la modernidad le impone.</p></body></html>
]]>
    </string>
    <string name="umariana" translatable="false">
        <![CDATA[ <html><body><p style=\"font-size:14px; padding=15px\" align=\"justify\">"Desde su fundaci&oacute;n, la Universidad Mariana contribuye con el desarrollo de sus funciones misionales a la transformaci&oacute;n del entorno social, educativo, ecol&oacute;gico, pol&iacute;tico, econ&oacute;mico y cultural a trav&eacute;s de las actividades realizadas desde sus diferentes Facultades, tanto en los programas presenciales como a distancia. En la actualidad cuenta con seis Unidades Acad&eacute;micas en las cuales se ofrece una variedad de programas tanto de pregrado como de postgrado, ellas son: Facultad de Educaci&oacute;n, Facultad de Humanidades y Ciencias Sociales, Facultad de Ciencias de la Salud, Facultad de Ciencias Contables, Econ&oacute;micas y Administrativas, Facultad de Ingenier&iacute;a y la Facultad de Postgrados y Relaciones Internacionales.</p></body></html>
]]>
    </string>
    <string name="cesmag" translatable="false">
        <![CDATA[ <html><body><p style=\"font-size:14px; padding=15px\" align=\"justify\">"La Instituci&oacute;n Universitaria Centro de Estudios Superiores Mar&iacute;a Goretti (I. U. CESMAG) es una universidad privada y cat&oacute;lica franciscana colombiana ubicada en San Juan de Pasto, Colombia. La Instituci&oacute;n fue fundada por el sacerdote cat&oacute;lico Guillermo de Castellana, tiene el nombre de la santa Maria Goretti, y cuenta con cinco facultades (Ciencias Sociales y Humanas, Ingenier&iacute;a, Arquitectura y Bellas Artes, Ciencias Administrativas y Contables, Educaci&oacute;n) que ofrecen un total de 12 programas de pregrado y 5 programas de posgrado.</p></body></html>
]]>
    </string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="jv" translatable="false">JORGE VILLALOBOS SALCEDO</string>
<string name="formacionjv" translatable="false">

-<![CDATA[ <html><body><p style=\"font-size:14px; \" align=\"justify\">"Ph.D en Inform&aacute;tica, Universidad Joseph Fourier (Grenoble, Francia), Master en Inform&aacute;tica, Institut National Polytechnique (Grenoble, Francia), Ingeniero de Sistemas y Computaci&oacute;n, Universidad de los Andes, Postdoctorado, Laboratorio LSR (Grenoble, Francia), Profesor Asociado Departamento de Ingenier&iacute;a de Sistemas y Computaci&oacute;n de la Universidad de los Andes. Investigador y consultor en las &aacute;reas de Arquitectura empresarial, Arquitectura de procesos y Arquitectura de soluci&oacute;n.<br>
         Pertenece al Grupo de investigaci&oacute;n TICSw - Tecnolog&iacute;as de la Informaci&oacute;n y Construcci&oacute;n de Software - TICSw
         </p></body></html>]]>
</string>
</resources>