<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="co.edu.isistemas.umariana.caciedapp.ConferencistasFragment"
    android:background="#eae0e0">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                >

                <LinearLayout
                    android:padding="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="134dp"
                        android:layout_height="134dp"
                        android:scaleType="centerCrop"
                        card_view:srcCompat="@drawable/vi" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:gravity="center"
                            android:hint="@string/nombredocente1"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:hint="@string/cargo1"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:hint="@string/gradoacademico1"
                            android:textSize="14sp" />

                        <TextView

                            android:id="@+id/textView10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:hint="@string/nombreacademico1"
                            android:textSize="14sp" />


                        <TextView

                            android:id="@+id/textView15"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif"
                            android:hint="@string/profesion"
                            android:textSize="14sp" />


                    </LinearLayout>
                </LinearLayout>


            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                >

                <LinearLayout
                    android:padding="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="134dp"
                        android:layout_height="134dp"
                        android:scaleType="centerCrop"
                        card_view:srcCompat="@drawable/frank" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:gravity="center"
                            android:hint="@string/nombredocente2"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:hint="@string/cargo2"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:hint="@string/nombreacademico2"
                            android:textSize="14sp" />

                        <TextView

                            android:id="@+id/textView1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:hint="@string/gradoacademico1"
                            android:textSize="14sp" />


                        <TextView

                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif"
                            android:hint="@string/profesion"
                            android:textSize="14sp" />


                    </LinearLayout>
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                >

                <LinearLayout
                    android:padding="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="134dp"
                        android:layout_height="134dp"
                        android:scaleType="centerCrop"
                        card_view:srcCompat="@drawable/inga" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:gravity="center"
                            android:hint="@string/nombredocente3"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:hint="@string/cargo3"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:hint="@string/nombreacademico2"
                            android:textSize="14sp" />

                        <TextView

                            android:id="@+id/textView12"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:hint="@string/gradoacademico1"
                            android:textSize="14sp" />


                        <TextView

                            android:id="@+id/textView51"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif"
                            android:hint="@string/profesion"
                            android:textSize="14sp" />


                    </LinearLayout>
                </LinearLayout>


            </android.support.v7.widget.CardView>




        </LinearLayout>
    </ScrollView>

</FrameLayout>
